update shell